<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/margem_padrao_cadastro"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDialogAlteracaoNomePerfilEmpresa"
        android:layout_width="@dimen/tam_300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margem_20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="@dimen/tam_10dp">


        <RadioButton
            android:id="@+id/etDialogAlteracaoAtendimentoUnissexPerfilEmpresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unissex"
            android:textColor="@color/preto"
            android:textSize="@dimen/tam_padrao_text_cadastro"/>

        <RadioButton
            android:id="@+id/etDialogAlteracaoAtendimentoFemininoPerfilEmpresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feminino"
            android:textColor="@color/preto"
            android:textSize="@dimen/tam_padrao_text_cadastro"
            />

        <RadioButton
            android:id="@+id/etDialogAlteracaoAtendimentoMasculinoPerfilEmpresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino"
            android:textColor="@color/preto"
            android:textSize="@dimen/tam_padrao_text_cadastro" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tam_10dp"
        android:layout_marginBottom="@dimen/margem_20dp">

        <Button
            android:id="@+id/btDialogAlteracaoNomeAntendimentoCancelar"
            android:layout_width="@dimen/tam_padrao_button"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_cancelar"
            android:textAllCaps="false"
            android:layout_marginRight="@dimen/margem_20dp"/>

        <Button
            android:id="@+id/btDialogAlteracaoNomeAntendimentoAlterar"
            android:layout_width="@dimen/tam_padrao_button"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_concluir"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/margem_20dp"/>

    </LinearLayout>

</LinearLayout>