<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/margem_padrao_cadastro"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margem_20dp">

        <Spinner
            android:id="@+id/spinnerDialogTipoContato"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/tam_10dp"
            />

        <EditText
            android:id="@+id/etDialogCadastroContato"
            android:layout_width="@dimen/tam_edit_texto_dialog_cadastro_contato"
            android:layout_height="wrap_content"
            android:hint="@string/listaContato"
            android:layout_marginLeft="5dp"
            android:paddingRight="@dimen/tam_10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margem_20dp"
        android:paddingTop="@dimen/margem_20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btDialogCancelarCadastroContato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_cancelar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btDialogCadastrarContatoMaisUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_mais_um"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btDialogCadastroContato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_cadastrar"
            android:textAllCaps="false"/>


    </LinearLayout>



</LinearLayout>