<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margem_20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivDialogApresentacaoPreviaFotoFuncionarioCadastroEmpresa"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginLeft="@dimen/margem_20dp"

            />

        <EditText
            android:id="@+id/etDialogCadastroNomeFuncionario"
            android:layout_width="@dimen/tam_edit_texto_dialog_cadastro_contato"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/nome_funcionario_cadastro"
            android:layout_marginRight="@dimen/margem_20dp"
            android:layout_marginLeft="@dimen/tam_10dp"
            android:inputType="text"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margem_20dp"
        android:paddingTop="@dimen/margem_20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btDialogCancelarCadastroFuncionario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_cancelar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btDialogCadastrarFuncionarioMaisUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_mais_um"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btDialogCadastroFuncionario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_button_cadastrar"
            android:textAllCaps="false"/>


    </LinearLayout>

</LinearLayout>